--- a/app/src/main/res/layout/content_form_add_kebijakan.xml
+++ b/app/src/main/res/layout/content_form_add_kebijakan.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical"
+    android:background="@color/colorGrey"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="id.rentist.mitrarentist.FormAddKebijakanActivity"
+    tools:showIn="@layout/activity_form_add_kebijakan">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,38 +16,40 @@
         android:orientation="vertical"
         android:padding="@dimen/min_padding"
         android:layout_margin="@dimen/xmin_padding"
-        android:background="@drawable/radius_white">
+        android:background="@drawable/radius_white"
+        android:focusableInTouchMode="true">
 
         <EditText
             android:id="@+id/kbj_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginTop="10dp"
-            android:hint="Judul Kebijakan"
+            android:backgroundTint="@color/colorGrey"
+            android:ems="10"
+            android:gravity="start"
+            android:hint="Perihal"
             android:inputType="text"
             android:padding="@dimen/min_padding"
-            android:backgroundTint="@color/colorGrey"
             android:textColor="@android:color/black"
-            android:textCursorDrawable="@null"
-            />
+            android:textCursorDrawable="@null" />
 
         <EditText
             android:id="@+id/kbj_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/colorGrey"
+            android:ems="10"
+            android:gravity="start"
             android:hint="Deskripsi"
             android:inputType="textMultiLine"
+            android:lines="3"
             android:maxLines="5"
             android:padding="@dimen/min_padding"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/colorGrey"
             android:textColor="@android:color/black"
             android:textColorHighlight="@color/colorPrimary"
-            android:textCursorDrawable="@null"
-            />
+            android:textCursorDrawable="@null" />
 
     </LinearLayout>
 
