--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="id.rentist.mitrarentist.DompetActivity"
+    tools:showIn="@layout/activity_dompet">
 
     <RelativeLayout
         android:layout_width="match_parent"
