--- a/app/src/main/res/layout/content_withdrawal.xml
+++ b/app/src/main/res/layout/content_withdrawal.xml
@@ -1,138 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="id.rentist.mitrarentist.WithdrawalActivity"
+    tools:showIn="@layout/activity_withdrawal">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/min_padding"
-        android:layout_margin="@dimen/min_padding"
-        android:background="@drawable/radius_white">
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/xmin_padding">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/min_padding"
-            android:paddingRight="@dimen/min_padding"
-            android:layout_gravity="center_horizontal">
+            android:layout_margin="@dimen/min_padding"
+            android:background="@drawable/radius_white"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
+            android:padding="@dimen/min_padding">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp."
-                android:id="@+id/rp"
-                android:layout_marginLeft="@dimen/min_padding"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/huge_text"/>
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:id="@+id/rp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/xmin_padding"
+                    android:text="Rp."
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/huge_text" />
+
+                <EditText
+                    android:id="@+id/wd_credit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/med_padding"
+                    android:layout_toRightOf="@+id/rp"
+                    android:backgroundTint="@color/colorBlack"
+                    android:cursorVisible="true"
+                    android:inputType="number"
+                    android:paddingStart="@dimen/xmin_padding"
+                    android:textColor="@android:color/black"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/huge_text" />
+
+                <ImageButton
+                    android:id="@+id/reset_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/colorWhite"
+                    android:clickable="true"
+                    app:srcCompat="@drawable/ic_refresh_black_36dp" />
+
+
+            </RelativeLayout>
 
             <EditText
-                android:id="@+id/wd_credit"
+                android:id="@+id/wd_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/rp"
-                android:inputType="number"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/colorGrey"
+                android:ems="10"
+                android:gravity="start"
+                android:hint="Keterangan"
+                android:inputType="textMultiLine"
+                android:lines="3"
+                android:maxLines="5"
+                android:padding="@dimen/min_padding"
                 android:textColor="@android:color/black"
-                android:textCursorDrawable="@null"
-                android:textSize="@dimen/huge_text"
-                android:backgroundTint="@color/colorBlack"
-                android:cursorVisible="true"
-                />
+                android:textColorHighlight="@color/colorPrimary"
+                android:textCursorDrawable="@null" />
 
-            <ImageButton
-                android:id="@+id/reset_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:src="@drawable/ic_refresh_black_24dp"
-                android:background="@color/colorWhite"
-                />
+        </LinearLayout>
 
-
-        </RelativeLayout>
-
-        <RadioGroup
-            android:id="@+id/rek_ragrup"
+        <Button
+            android:id="@+id/btn_withdrawal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="@dimen/min_padding"
-            android:layout_marginTop="@dimen/med_padding">
-
-            <RadioButton
-                android:id="@+id/rad_terdaftar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:buttonTint="@color/colorPrimary"
-                android:checked="true"
-                android:contextClickable="false"
-                android:text="Rek. Terdaftar" />
-
-            <RadioButton android:id="@+id/rad_baru"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rek. Baru"
-                android:buttonTint="@color/colorPrimary"
-                />
-        </RadioGroup>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/con_baru"
-                android:visibility="gone">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Nomor Rekening"
-                    android:inputType="number"
-                    android:paddingTop="@dimen/min_padding"
-                    android:backgroundTint="@color/colorGrey"
-                    android:textColor="@android:color/black"
-                    android:textCursorDrawable="@null"
-                    />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Bank Tujuan"
-                    android:inputType="text"
-                    android:paddingTop="@dimen/min_padding"
-                    android:backgroundTint="@color/colorGrey"
-                    android:textColor="@android:color/black"
-                    android:textCursorDrawable="@null"
-                    />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Atas Nama"
-                    android:inputType="textPersonName"
-                    android:paddingTop="@dimen/min_padding"
-                    android:backgroundTint="@color/colorGrey"
-                    android:textColor="@android:color/black"
-                    android:textCursorDrawable="@null"
-                    />
-
-            </LinearLayout>
-        </ScrollView>
-
-    </LinearLayout>
+            android:layout_height="@dimen/btn_lmedium_height"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:layout_margin="0dp"
+            android:background="@color/colorPrimaryDark"
+            android:padding="0dp"
+            android:text="Withdrawal"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/medium_text" />
+    </RelativeLayout>
 
 </LinearLayout>
