--- a/app/src/main/res/layout/activity_form_driver.xml
+++ b/app/src/main/res/layout/activity_form_driver.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgound"
     tools:context="id.rentist.mitrarentist.FormDriverActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -25,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/breadcrumb_height"
-        android:padding="@dimen/min_padding">
+        android:padding="@dimen/xmin_padding">
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
