--- a/app/src/main/res/layout/content_detail_aset.xml
+++ b/app/src/main/res/layout/content_detail_aset.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorBackgound"
     android:padding="@dimen/xmin_padding">
 
     <LinearLayout
@@ -34,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginStart="10dp"
-            android:background="@drawable/radius_primary"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:text="@string/status_aktif"
             android:textAlignment="center"
@@ -44,14 +45,14 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/card_view_transaksi"
+            android:orientation="vertical"
             android:layout_marginBottom="@dimen/xmin_padding"
-            android:background="@drawable/radius_white"
-            app:cardBackgroundColor="@color/colorWhite"
-            app:cardElevation="1dp"
+            android:background="@color/colorWhite"
+
             android:foreground="?selectableItemBackground"
             android:clickable="false"
             >
@@ -138,6 +139,9 @@
                             android:id="@+id/det_as_harga_det"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/colorPrice"
+                            android:text="Price"
+                            android:textStyle="bold"
                             android:layout_toEndOf="@+id/det_as_harga_thumb"/>
 
                     </RelativeLayout>
@@ -260,13 +264,13 @@
             </RelativeLayout>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
         <CalendarView
             android:id="@+id/calendar_aset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/radius_white" />
+            android:background="@color/colorWhite" />
 
     </LinearLayout>
 
