--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -17,7 +17,7 @@
             android:id="@+id/credit_info"
             android:layout_width="match_parent"
             android:layout_height="@dimen/explorer_item_size"
-            android:layout_margin="@dimen/min_padding"
+            android:layout_margin="@dimen/xmin_padding"
             android:clickable="true"
             android:foreground="?selectableItemBackground"
             app:cardBackgroundColor="@color/colorWhite"
@@ -75,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/explorer_item_size"
             android:layout_below="@+id/credit_info"
-            android:layout_margin="@dimen/min_padding"
+            android:layout_margin="@dimen/xmin_padding"
             android:clickable="true"
             android:foreground="?selectableItemBackground"
             app:cardBackgroundColor="@color/colorWhite"
