--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -20,9 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_user_detail"
-
-     />
+    <include layout="@layout/content_user_detail"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
