--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -21,6 +21,29 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="@dimen/min_padding">
+
+                <ImageView
+                    android:id="@+id/us_thumb"
+                    android:layout_width="@dimen/thumb_width"
+                    android:layout_height="@dimen/thumb_height"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/blue_android" />
+
+                <Button
+                    android:id="@+id/btnUploadFoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/xmin_padding"
+                    android:layout_weight="1"
+                    android:text="Pilih Foto" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
                 android:orientation="vertical">
@@ -85,7 +108,7 @@
                     android:ems="10"
                     android:hint="Ulangi Kata Sandi"
                     android:inputType="textPassword"
-                    android:padding="@dimen/med_padding" />
+                    android:padding="@dimen/min_padding" />
 
             </LinearLayout>
 
