--- a/app/src/main/res/layout/content_work_date.xml
+++ b/app/src/main/res/layout/content_work_date.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/min_padding"
+    android:padding="@dimen/xmin_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.WorkDateActivity"
     tools:showIn="@layout/activity_work_date">
