--- a/app/src/main/res/layout/voucher_item_view.xml
+++ b/app/src/main/res/layout/voucher_item_view.xml
@@ -13,10 +13,10 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/xmin_padding"
         android:layout_marginRight="@dimen/xmin_padding"
+        android:layout_marginTop="@dimen/xmin_padding"
         android:foreground="?selectableItemBackground"
         app:cardBackgroundColor="@color/colorWhite"
-        app:cardElevation="1dp"
-        android:layout_marginTop="@dimen/xmin_padding">
+        app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,39 +26,44 @@
 
             <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:columnCount="2">
 
                 <TextView
                     android:id="@+id/vou_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_columnWeight="0"
+                    android:text="Nama Voucher"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/medium_text"
-                    android:textStyle="bold"
-                    android:text="Nama Voucher"/>
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/vou_status"
-                    android:layout_width="85dp"
+                    android:id="@+id/vou_as_category"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="end"
                     android:background="@drawable/radius_primary"
+                    android:paddingBottom="@dimen/xmin_padding"
+                    android:paddingLeft="@dimen/med_padding"
+                    android:paddingRight="@dimen/med_padding"
+                    android:paddingTop="@dimen/xmin_padding"
+                    android:text="Kategori"
+                    android:textAlignment="center"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/medium_text"
-                    android:layout_gravity="end"
-                    android:textStyle="bold"
-                    android:textAlignment="center"
-                    android:padding="@dimen/xmin_padding"
-                    android:text="Aktif" />
-
+                    android:textStyle="bold" />
 
 
             </GridLayout>
 
             <View
+                android:id="@+id/line"
                 android:layout_width="200dp"
                 android:layout_height="1dp"
-                android:id="@+id/line"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/darker_gray" />
 
             <GridLayout
                 android:layout_width="match_parent"
@@ -69,9 +74,9 @@
                     android:id="@+id/vou_discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/medium_text"
-                    android:text="Rp 10000"/>
+                    android:text="Rp 10000"
+                    android:textColor="@color/colorPrice"
+                    android:textSize="@dimen/medium_text" />
 
                 <GridLayout
                     android:layout_width="wrap_content"
@@ -79,59 +84,92 @@
                     android:layout_gravity="end">
 
                     <TextView
-                        android:id="@+id/vou_amount_text"
+                        android:id="@+id/vou_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/medium_text"
                         android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="Kuota: "/>
+                        android:text="Type"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/medium_text" />
 
-                    <TextView
-                        android:id="@+id/vou_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/medium_text"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="100"/>
+                <!--<TextView-->
+                        <!--android:id="@+id/vou_amount_text"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                        <!--android:text="Kuota: "-->
+                        <!--android:textColor="@color/colorBlack"-->
+                        <!--android:textSize="@dimen/medium_text" />-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/vou_amount"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                        <!--android:text="100"-->
+                        <!--android:textColor="@color/colorBlack"-->
+                        <!--android:textSize="@dimen/medium_text" />-->
 
                 </GridLayout>
 
             </GridLayout>
 
-            <GridLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/xmin_padding"
+                >
 
-                <TextView
-                    android:id="@+id/vou_startDate"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/medium_text"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:text="07 Juli 2017"/>
+                    android:orientation="horizontal"
+                    >
 
-                <TextView
-                    android:id="@+id/vou_sampai"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/medium_text"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:text=" sampai "/>
+                    <TextView
+                        android:id="@+id/vou_startDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="07 Juli 2017"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/medium_text"
+                        />
 
-                <TextView
-                    android:id="@+id/vou_endDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/medium_text"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:text="21 Juli 2017"/>
+                    <TextView
+                        android:id="@+id/vou_sampai"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text=" sampai "
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/medium_text"
+                        />
 
-            </GridLayout>
+                    <TextView
+                        android:id="@+id/vou_endDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="21 Juli 2017"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/medium_text" />
+                </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/vou_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="Ubah"
+                        android:gravity="end"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/medium_text"
+                        android:clickable="true"/>
+
+
+            </RelativeLayout>
 
         </LinearLayout>
 
