--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -73,16 +73,50 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:imeOptions="actionNext"
                     android:hint="Nama"
                     android:padding="@dimen/min_padding" />
 
-                <EditText
-                    android:id="@+id/us_role"
-                    android:layout_width="match_parent"
+                <RelativeLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Role"
-                    android:padding="@dimen/min_padding" />
+                    android:padding="@dimen/min_padding"
+
+                    >
+
+                    <TextView
+                        android:id="@+id/role_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:text="Role : "
+                        android:textSize="@dimen/medium_text"
+                         />
+
+                    <Spinner
+                        android:id="@+id/us_role"
+                        android:layout_toRightOf="@id/role_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/role_entries"
+                        android:fadingEdge="horizontal"
+                        android:padding="@dimen/xmin_padding"
+                        app:layout_gravity="bottom" />
+
+                    <View
+                        android:id="@+id/line"
+                        android:layout_toRightOf="@id/role_txt"
+                        android:layout_alignBottom="@id/us_role"
+                        android:layout_width="match_parent"
+                        android:paddingRight="@dimen/min_padding"
+                        android:paddingLeft="@dimen/min_padding"
+                        android:layout_height="1dp"
+                        android:background="@android:color/darker_gray" />
+
+
+
+                </RelativeLayout>
 
                 <EditText
                     android:id="@+id/us_email"
@@ -90,6 +124,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Email"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
                     android:padding="@dimen/min_padding" />
 
                 <EditText
@@ -98,6 +134,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Kata Sandi"
+                    android:imeOptions="actionNext"
                     android:inputType="textPassword"
                     android:padding="@dimen/min_padding" />
 
