--- a/app/src/main/res/layout/activity_asset_detail.xml
+++ b/app/src/main/res/layout/activity_asset_detail.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/med_padding">
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
