--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -27,7 +27,7 @@
                 android:padding="@dimen/min_padding">
 
                 <ImageView
-                    android:id="@+id/us_thumb"
+                    android:id="@+id/fus_thumb"
                     android:layout_width="@dimen/thumb_width"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
@@ -46,7 +46,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:focusableInTouchMode="true">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -69,12 +70,12 @@
                 </RelativeLayout>
 
                 <EditText
-                    android:id="@+id/us_name"
+                    android:id="@+id/fus_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:imeOptions="actionNext"
                     android:hint="Nama"
+                    android:imeOptions="actionNext"
                     android:padding="@dimen/min_padding" />
 
                 <RelativeLayout
@@ -91,11 +92,10 @@
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
                         android:text="Role : "
-                        android:textSize="@dimen/medium_text"
-                         />
+                        android:textSize="@dimen/medium_text" />
 
                     <Spinner
-                        android:id="@+id/us_role"
+                        android:id="@+id/fus_role"
                         android:layout_toRightOf="@id/role_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -107,45 +107,45 @@
                     <View
                         android:id="@+id/line"
                         android:layout_toRightOf="@id/role_txt"
-                        android:layout_alignBottom="@id/us_role"
+                        android:layout_alignBottom="@id/fus_role"
                         android:layout_width="match_parent"
                         android:paddingRight="@dimen/min_padding"
                         android:paddingLeft="@dimen/min_padding"
                         android:layout_height="1dp"
                         android:background="@android:color/darker_gray" />
 
-
-
                 </RelativeLayout>
 
                 <EditText
-                    android:id="@+id/us_email"
+                    android:id="@+id/fus_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Email"
-                    android:inputType="text"
                     android:imeOptions="actionNext"
+                    android:inputType="text"
                     android:padding="@dimen/min_padding" />
 
                 <EditText
-                    android:id="@+id/us_password"
+                    android:id="@+id/fus_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Kata Sandi"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
-                    android:padding="@dimen/min_padding" />
+                    android:padding="@dimen/min_padding"
+                    android:visibility="gone" />
 
                 <EditText
-                    android:id="@+id/us_repassword"
+                    android:id="@+id/fus_repassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Ulangi Kata Sandi"
                     android:inputType="textPassword"
-                    android:padding="@dimen/min_padding" />
+                    android:padding="@dimen/min_padding"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
