--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -42,6 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:id="@+id/dm_det_saldo"
                     android:layout_toEndOf="@+id/dm_credit_ico"
                     android:orientation="vertical">
 
@@ -66,7 +67,10 @@
 
                 </LinearLayout>
 
+
+
             </RelativeLayout>
+
 
         </android.support.v7.widget.CardView>
 
